# hypr

./: CLAUDE.md  hyprland.conf  hyprpaper.conf
eww/: eww.scss  eww.yuck
eww-dashboard/: eww.scss  eww.yuck
hamr/: colors.json  config.json
launcher/: Cargo.toml
launcher/assets/: config.default.toml
launcher/aura-launcher/: Cargo.toml
launcher/aura-launcher/assets/: style.css
launcher/aura-launcher/src/: app.rs  config.rs  main.rs  window.rs
launcher/aura-launcher/src/ui/: input.rs  mod.rs  results.rs
launcher/aura-lib/: Cargo.toml
launcher/aura-lib/src/: desktop.rs  history.rs  icons.rs  lib.rs  matcher.rs
schemes/: aura-dark.txt
scripts/: calendar-listen.sh  calendar-nav.sh  calendar.sh  dashboard-workspace.sh  sysinfo.sh  toggle-calendar.sh
sddm-theme/: metadata.desktop  theme.conf
shaders/: vibrance.frag  vibrance.inc
waybar/: config  style.css
