[workspace]
members = ["aura-launcher", "aura-lib"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Brian Pham"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gtk4 = "0.10"
gtk4-layer-shell = "0.7"
nucleo = "0.5"
freedesktop-desktop-entry = "0.8"
freedesktop-icons = "0.2"
toml = "0.8"
xdg = "2.5"
lru = "0.12"
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
