[package]
name = "aura-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aura-launcher"
path = "src/main.rs"

[dependencies]
aura-lib = { path = "../aura-lib" }
serde.workspace = true
toml.workspace = true
gtk4.workspace = true
gtk4-layer-shell.workspace = true
xdg.workspace = true
once_cell.workspace = true
log.workspace = true
env_logger.workspace = true
