[package]
name = "aura-lib"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
nucleo.workspace = true
freedesktop-desktop-entry.workspace = true
freedesktop-icons.workspace = true
xdg.workspace = true
lru.workspace = true
log.workspace = true
